Add 3-5-7 day forecast buttons to Weather component; minor CSS tweaks; add corsanywhere to URL for APIXU API

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -82,6 +82,7 @@ Results Area for weather and venues
 ==============================*/
 footer {
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 7rem;
@@ -90,10 +91,16 @@ footer {
    background: #fff url("images/round_town_BG2.png")bottom center;
  }
 
-#copyright {
+#copyright,
+#weather-source {
   font-size: 1.2rem;
   color: #fff;
   font-family: 'Montserrat Alternates', sans-serif;
+  margin: 0;
+}
+
+#weather-source a {
+  color: #eee;
 }
 
 
