--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 18rem;
-  height: auto;
+  height: 12rem;
   border: 1px solid black;
   border-radius: 1rem;
   padding: 1rem;
