--- a/src/components/WeatherList/WeatherList.css
+++ b/src/components/WeatherList/WeatherList.css
@@ -8,7 +8,8 @@
 
 .sectiontitle {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
   height: 3vh;
   width: 81vw;
   padding: 0 0 4rem 0;
@@ -20,4 +21,31 @@
   font-size: 2rem;
   letter-spacing: 3.4px;
   color: #7AB800;
+}
+
+.forecast-btn {
+  width: 100px;
+  height: 35px;
+  border-radius: 4px;
+  background-color: #7AB800;
+  box-shadow: 0 0 3px black;
+  font-size: 1.2rem;
+  color: white;
+  letter-spacing: 0.5px;
+  text-align: center;
+  margin: .6rem 0 0 .5rem;
+  font-family: 'Montserrat Alternates', sans-serif;
+  transition: all .3s;
+  outline-color: #FD7400;
+}
+
+.forecast-btn:hover {
+  color: #000;
+  background-color: #89b92a;
+}
+
+.forecast-btn:active {
+  color: #000;
+  background-color: #89b92a;
+  box-shadow: inset 0 0 3px black;
 }
